--- a/EzOrder(Cus)/EzOrder(Cus).entitlements
+++ b/EzOrder(Cus)/EzOrder(Cus).entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.in-app-payments</key>
 	<array>
-		<string>merchant.com.TerryLee.EzOrder-Cus-</string>
+		<string>merchant.com.TerryLee.EzOrderCus</string>
 	</array>
 </dict>
 </plist>
